--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi>=0.118.0",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
+    "pandas>=2.3.3",
     "pydantic>=2.11.9",
     "pydap>=3.5.8",
+    "requests>=2.32.5",
     "uvicorn>=0.37.0",
     "xarray>=2025.9.1",
 ]
