--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,11 @@ dependencies = [
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "pandas>=2.3.3",
+    "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.9",
     "pydap>=3.5.8",
     "requests>=2.32.5",
+    "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
     "xarray>=2025.9.1",
 ]
